--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "d3-fetch": "^1.1.2"
+    "d3-fetch": "^1.1.2",
+    "esri-loader": "^2.14.0"
   }
 }
